@@ -1,3 +1,8 @@
+2009-06-11  Jonathan Pryor  <jpryor@novell.com>
+
+	* ReadOnlyDictionary.cs: Added; implementation thanks to 
+	  Eric Maupin  <me@ermau.com>.
+
 2009-04-16  Jonathan Pryor  <jpryor@novell.com>
 
 	* EnumerableValueReader.cs, TextValueReader.cs: Use ValueReader<T> as 
